# enterprise-orchestration

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  plan.md  pnpm-lock.yaml
.cursor/rules/: tauri-desktop.mdc
.github/workflows/: ci.yml
apps/control-ui/: index.html  package.json
apps/control-ui/src/: App.css  App.tsx  index.css
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
crates/control-server/: Cargo.toml
crates/control-server/src/: lib.rs
crates/desktop-core/: Cargo.toml
crates/desktop-core/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: agent_role.rs  approval.rs  artifact.rs  event.rs  executor.rs  goal.rs  lib.rs  organization.rs  project.rs  run.rs  skill.rs  workflow.rs
crates/executors/: Cargo.toml
crates/executors/src/: adapter.rs  claude_code.rs  codex.rs  generic_cli.rs  lib.rs  native_cli_ai.rs  opencode.rs  shell.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: approval_service.rs  executor_driver.rs  lib.rs  prompt_builder.rs  retry_policy.rs  run_orchestrator.rs  step_dispatcher.rs  super_owner.rs  workflow_compiler.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_initial.sql  0002_super_owner.sql
crates/persistence/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agents_md.rs  execution.rs  lib.rs  project_context.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
docs/: architecture.md  executor-adapters.md  packaging.md  remote-control.md
