[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/domain",
  "crates/persistence",
  "crates/orchestrator",
  "crates/runtime",
  "crates/executors",
  "crates/control-server",
  "crates/desktop-core",
  "crates/security",
  "crates/observability",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
http = "1.3"
mime = "0.3"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "serde_json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "=1.11.0", features = ["serde", "v4"] }
