[package]
name = "desktop-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
control-server = { path = "../control-server" }
observability = { path = "../observability" }
persistence = { path = "../persistence" }
security = { path = "../security" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
