[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
domain = { path = "../domain" }
observability = { path = "../observability" }
persistence = { path = "../persistence" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
