[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
domain = { path = "../domain" }
executors = { path = "../executors" }
observability = { path = "../observability" }
parking_lot = "0.12"
persistence = { path = "../persistence" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
