[package]
name = "desktop-app"
version.workspace = true
description = "Enterprise Orchestration Tauri desktop shell"
authors = ["madebyaris"]
license.workspace = true
repository = "https://github.com/madebyaris/enterprise-orchestration"
edition.workspace = true
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
desktop-core = { path = "../../../crates/desktop-core" }
serde.workspace = true
serde_json.workspace = true
log = "0.4"
tauri = { version = "=2.10.3", features = [] }
tracing.workspace = true
